current feature selection stuff
- probably should just update what is in my repo right now
- go the feature selection analysis jupyter notebook -> removes feature with low variation of data and highly correlated ones
- added functions (ones being called in the notebook) in the pre training analysis python file -> some probably do not help at all

--- a/Metric Analysis 2.ipynb
+++ b/Metric Analysis 2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,33 +25,115 @@
     "import statsmodels.api as sm\n",
     "\n",
     "# import local modules.e\n",
-    "from utils import data_loader\n",
-    "from model import basic_regression"
+    "from utils import data_loader\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e42b607f3cbb48518ca84103ad0a9ab2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Summarize dataset'), FloatProgress(value=0.0, max=30.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2565b811182f44f1b7156ad92f069e37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Generate report structure'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Render widgets'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13230d6bac7d43049ce8f692b35421b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Tab(children=(Tab(children=(GridBox(children=(VBox(children=(GridspecLayout(children=(HTML(valu…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# define constants.\n",
-    "DATASET_2019_FILEPATH = r'./data/dataset_2019.csv'  # dataset from https://www.sciencedirect.com/science/article/pii/S235234091931042X\n",
+    "DATASET_2019_FILEPATH = r'./data/dataset_aggregate_sum.csv'  # dataset from https://www.sciencedirect.com/science/article/pii/S235234091931042X\n",
     "\n",
     "# reading the ex\n",
     "data = pd.read_csv(DATASET_2019_FILEPATH)\n",
     "                   \n",
     "# strip any observation with incomplete data.\n",
-    "data.dropna()\n",
+    "data.dropna(how='any', inplace=True)\n",
     "\n",
     "# drop unnecessary values.\n",
-    "data.pop('id')\n",
-    "data.pop('Project')\n",
-    "data.pop('Name')\n",
-    "data.pop('LongName')\n",
+    "data.pop('project')\n",
+    "data.pop('release')\n",
+    "data.pop('maven_release')\n",
     "\n",
-    "X = data.iloc[:,0:27]\n",
-    "y = data.iloc[:,-1]"
+    "import pandas_profiling\n",
+    "from pandas_profiling import ProfileReport\n",
+    "profile = ProfileReport(data, title=\"Pandas Profiling ReportV2\")\n",
+    "profile.to_widgets()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# separate into train and test datasets.\n",
+    "#train_x = complete_dataset.sample(frac=0.8,random_state=0)\n",
+    "#test_x = complete_dataset.drop(train_x.index)   # remove all training observations.\n",
+    "\n",
+    "# split x and y values.\n",
+    "#train_y = train_x.pop('mavern_reuse')\n",
+    "#test_y = test_x.pop('mavern_reuse')"
    ]
   },
   {
@@ -335,7 +417,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "    import numpy as np\n",
+    "    from sklearn import datasets\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
