Update Feature Selection Analysis.ipynb
just adding references

--- a/Feature Selection Analysis.ipynb
+++ b/Feature Selection Analysis.ipynb
@@ -11,6 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### References:\n",
+    "References about feature selection, used some, some haven't - dont understand when to use etc, and also jsut dumping some of the tabs i have opened here\n",
+    "https://towardsdatascience.com/feature-selection-techniques-for-classification-and-python-tips-for-their-application-10c0ddd7918b\n",
+    "https://towardsdatascience.com/overview-of-feature-selection-methods-a2d115c7a8f7\n",
+    "https://github.com/jundongl/scikit-feature/blob/master/skfeature/function/similarity_based/lap_score.py\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### run the code in sequential order, until the next comment which says to not"
    ]
   },
