Refining the XGB model

--- a/XGBoost Analysis Tool.ipynb
+++ b/XGBoost Analysis Tool.ipynb
@@ -16,9 +16,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            1.0.0\n",
+       "1              0.7\n",
+       "2           2.5.23\n",
+       "3           2.5.23\n",
+       "4           2.4.20\n",
+       "          ...     \n",
+       "238    1.1.0.Final\n",
+       "239           1.58\n",
+       "240           1.13\n",
+       "241          2.6.1\n",
+       "242        1.4.3-1\n",
+       "Name: release, Length: 243, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Import libraries:\n",
     "import pandas as pd\n",
@@ -33,9 +55,12 @@
     "from matplotlib.pylab import rcParams\n",
     "rcParams['figure.figsize'] = 12, 4\n",
     "\n",
-    "train = pd.read_csv('')\n",
+    "train = pd.read_csv('./data/aggregate_201007.csv')\n",
     "target = 'ReuseRate'\n",
-    "IDcol = 'ID'"
+    "IDcol = 'Project'\n",
+    "train.dropna()\n",
+    "train.pop('maven_release')\n",
+    "train.pop('release')"
    ]
   },
   {
@@ -47,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
