--- a/Principal Component Analysis.ipynb
+++ b/Principal Component Analysis.ipynb
@@ -4050,8 +4050,6 @@
     "# data - both x and y \n",
     "data = data_loader.load_real_dataset()\n",
     "\n",
-    "\n",
-    "\n",
     "# getting the x or y component of the data\n",
     "data_x = data['train_x']\n",
     "data_y = data['train_y']\n",
@@ -4463,7 +4461,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# using this pca on all models (no hyper parameter tuning form)\n",
+    "pre_training_analysis_tools.all_model_score(data_x,data_y,test_x,test_y)"
+   ]
   }
  ],
  "metadata": {
