--- a/LMNN.ipynb
+++ b/LMNN.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original feature shape: (216, 265)\n",
-      "Transformed feature shape: (216, 209)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import local modules.\n",
     "from model.k_nearest_neigbors import KNearestNeighbors\n",
@@ -22,17 +13,8 @@
     "from utils import data_loader, pre_training_analysis_tools\n",
     "\n",
     "\n",
-    "data = data_loader.load_real_dataset(sqaured=False, remove_multicollinearity=False)\n",
-    "output_xy = pre_training_analysis_tools.variance_threshold(data['train_x'],data['train_y'])\n",
-    "split_xy = pre_training_analysis_tools.split_dataxy(output_xy)\n",
-    "x = split_xy['train_x']\n",
-    "y = split_xy['train_y']\n",
-    "\n",
-    "from skfeature.function.statistical_based import CFS\n",
-    "score = CFS.cfs(x.to_numpy() , y.to_numpy())    \n",
-    "x = x.iloc[:, [32, 131,  33,  39, 174,  26, 132, 144,   9,  10,  15,  20]]\n",
-    "\n",
-    "data_xy = pre_training_analysis_tools.join_dataxy(x, y)\n",
+    "data = data_loader.load_real_dataset(normalise=True, cfs=True)\n",
+    "data_xy = pre_training_analysis_tools.join_dataxy(data['train_x'], data['train_y'])\n",
     "data = pre_training_analysis_tools.generate_train_test_xy(data_xy)\n",
     "\n",
     "\n",
@@ -44,14 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -59,120 +34,120 @@
      "output_type": "stream",
      "text": [
       "Iteration 1 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=8\tn_neighbors(knn)=11\tn_components=3\tmax_iter=85 ...\n",
+      "Trying n_neighbors(lmnn)=12\tn_neighbors(knn)=6\tn_components=5\tmax_iter=146 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.5217\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.7907\n",
       "\n",
       "Iteration 2 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=3\tn_neighbors(knn)=4\tn_components=10\tmax_iter=56 ...\n",
+      "Trying n_neighbors(lmnn)=10\tn_neighbors(knn)=10\tn_components=14\tmax_iter=118 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.5652\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.7209\n",
       "\n",
       "Iteration 3 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=1\tn_neighbors(knn)=13\tn_components=4\tmax_iter=71 ...\n",
+      "Trying n_neighbors(lmnn)=6\tn_neighbors(knn)=13\tn_components=22\tmax_iter=189 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.4783\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.5116\n",
       "\n",
       "Iteration 4 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=9\tn_neighbors(knn)=12\tn_components=12\tmax_iter=53 ...\n",
+      "Trying n_neighbors(lmnn)=5\tn_neighbors(knn)=3\tn_components=15\tmax_iter=27 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.6087\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.7442\n",
       "\n",
       "Iteration 5 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=12\tn_neighbors(knn)=1\tn_components=8\tmax_iter=159 ...\n",
+      "Trying n_neighbors(lmnn)=10\tn_neighbors(knn)=2\tn_components=7\tmax_iter=175 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.7391\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.8140\n",
       "\n",
       "Iteration 6 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=4\tn_neighbors(knn)=9\tn_components=4\tmax_iter=50 ...\n",
+      "Trying n_neighbors(lmnn)=8\tn_neighbors(knn)=3\tn_components=15\tmax_iter=175 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.6087\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.5814\n",
       "\n",
       "Iteration 7 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=10\tn_neighbors(knn)=9\tn_components=8\tmax_iter=41 ...\n",
+      "Trying n_neighbors(lmnn)=14\tn_neighbors(knn)=1\tn_components=19\tmax_iter=60 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.6522\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.7209\n",
       "\n",
       "Iteration 8 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=1\tn_neighbors(knn)=3\tn_components=4\tmax_iter=84 ...\n",
+      "Trying n_neighbors(lmnn)=5\tn_neighbors(knn)=6\tn_components=4\tmax_iter=79 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.4783\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.6512\n",
       "\n",
       "Iteration 9 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=5\tn_neighbors(knn)=5\tn_components=9\tmax_iter=45 ...\n",
+      "Trying n_neighbors(lmnn)=14\tn_neighbors(knn)=13\tn_components=10\tmax_iter=159 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.6087\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.6977\n",
       "\n",
       "Iteration 10 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=11\tn_neighbors(knn)=11\tn_components=7\tmax_iter=164 ...\n",
+      "Trying n_neighbors(lmnn)=14\tn_neighbors(knn)=11\tn_components=20\tmax_iter=58 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.6522\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.7209\n",
       "\n",
       "Iteration 11 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=13\tn_neighbors(knn)=1\tn_components=8\tmax_iter=90 ...\n",
+      "Trying n_neighbors(lmnn)=3\tn_neighbors(knn)=8\tn_components=6\tmax_iter=102 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.6957\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.6047\n",
       "\n",
       "Iteration 12 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=8\tn_neighbors(knn)=13\tn_components=3\tmax_iter=54 ...\n",
+      "Trying n_neighbors(lmnn)=6\tn_neighbors(knn)=2\tn_components=10\tmax_iter=165 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.5217\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.6744\n",
       "\n",
       "Iteration 13 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=14\tn_neighbors(knn)=5\tn_components=4\tmax_iter=49 ...\n",
+      "Trying n_neighbors(lmnn)=13\tn_neighbors(knn)=5\tn_components=14\tmax_iter=58 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.7826\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.6279\n",
       "\n",
       "Iteration 14 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=3\tn_neighbors(knn)=13\tn_components=11\tmax_iter=152 ...\n",
+      "Trying n_neighbors(lmnn)=3\tn_neighbors(knn)=4\tn_components=8\tmax_iter=86 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.5652\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.6279\n",
       "\n",
       "Iteration 15 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=2\tn_neighbors(knn)=7\tn_components=3\tmax_iter=194 ...\n",
+      "Trying n_neighbors(lmnn)=9\tn_neighbors(knn)=5\tn_components=12\tmax_iter=82 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.6957\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.5814\n",
       "\n",
       "Iteration 16 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=7\tn_neighbors(knn)=7\tn_components=11\tmax_iter=74 ...\n",
+      "Trying n_neighbors(lmnn)=15\tn_neighbors(knn)=6\tn_components=22\tmax_iter=91 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.4783\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.7442\n",
       "\n",
       "Iteration 17 of Bayesian Optimisation\n",
-      "Trying n_neighbors(lmnn)=9\tn_neighbors(knn)=5\tn_components=11\tmax_iter=78 ...\n",
+      "Trying n_neighbors(lmnn)=3\tn_neighbors(knn)=2\tn_components=14\tmax_iter=157 ...\n",
       "\n",
-      "Evaluating the found transformation on validation set of size 23...\n",
-      "Validation error=0.6087\n",
+      "Evaluating the found transformation on validation set of size 43...\n",
+      "Validation error=0.4884\n",
       "\n",
-      "[1.10602969e+00 1.26265241e+01 3.91842497e+00 7.01741537e+01\n",
-      " 8.99658334e-01 3.24502599e+05]\n",
-      "Best parameters: n_neighbors(lmnn)=1 n_neighbors(knn)=13 n_components=4 max_iter=71\n",
+      "[2.69725470e+00 2.43377234e+00 1.38376034e+01 1.56649813e+02\n",
+      " 9.52963288e-01 7.97564412e+05]\n",
+      "Best parameters: n_neighbors(lmnn)=3 n_neighbors(knn)=2 n_components=14 max_iter=157\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1, 13, 4, 71, 1.0, 324503)"
+       "(3, 2, 14, 157, 1.0, 797565)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +162,7 @@
     "from pylmnn import LargeMarginNearestNeighbor\n",
     "\n",
     "\n",
-    "def find_hyperparams(X_train, y_train, X_valid, y_valid, params=None, max_bopt_iter=1000):\n",
+    "def find_hyperparams(X_train, y_train, X_valid, y_valid, params=None, max_bopt_iter=10000):\n",
     "    \"\"\"Find the best hyperparameters for LMNN using Bayesian Optimisation.\n",
     "\n",
     "    Parameters\n",
@@ -307,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LMNN accuracy on test set of 23 points: 0.5217\n"
+      "LMNN accuracy on test set of 43 points: 0.3256\n"
      ]
     }
    ],
@@ -328,7 +303,7 @@
     "# adding make no difference: weight_push_loss=1.0\n",
     "# max_impostors=871159\n",
     "#lmnn = LMNN(n_neighbors=6, max_iter=80, n_components=6 )\n",
-    "lmnn = LMNN(n_neighbors=10, max_iter=109, n_components=6 )\n",
+    "lmnn = LMNN(n_neighbors=3, max_iter=157, n_components=14)\n",
     "\n",
     "\n",
     "#10, 5, 6, 109, 1.0, 646122\n",
@@ -337,7 +312,7 @@
     "lmnn.fit(data_x, data_y)\n",
     "\n",
     "# Fit the nearest neighbors classifier\n",
-    "knn = KNeighborsClassifier(n_neighbors=10)\n",
+    "knn = KNeighborsClassifier(n_neighbors=2)\n",
     "knn.fit(lmnn.transform(data_x), data_y)\n",
     "\n",
     "# Compute the k-nearest neighbor test accuracy after applying the learned transformation\n",
@@ -347,6 +322,13 @@
     "\n",
     "# 0.8 cor & new data set & cfs = 0.5179"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
